# PRISM_Engine

./: CMakeLists.txt  README.md  TODO
assets/engine/shaders/: default copy.frag  default copy.vert  default.frag  default.vert  skybox.frag  skybox.vert
docs/: Class_Styles.txt
include/PRISM/: App.h  Shader.h
include/PRISM/Core/: AssetManger.h  Time.h  Window.h
include/PRISM/Core/Input/: Input.h  Mouse.h
include/PRISM/Editor/Panels/: DevelopmentPanel.h  EditorScenePanel.h  EditorStatisticsPanel.h  Panels.txt
include/PRISM/Engine/: CameraEntity.h  Entity.h  Light.h  ModelEntity.h  OrbitalCameraEntity.h  Scene.h  SceneLighting.h  SceneManager.h  Terrain.h  Transform.h
include/PRISM/Examples/: CubeScene.h  RubiksCubeExample.h  TerrainGenerator.h  TerrainScene.h
include/PRISM/Examples/Panels/: EditorSceneTerrainPanel.h
include/PRISM/Examples/Scenes/: TerrainScene.h
include/PRISM/Renderer/: Camera.h  Cube.h  CubeMap.h  DEPRACATED_Cube.h  DirectionalLight.h  Mesh.h  Model.h  Plane.h  RenderSettings.h  Renderer.h  Shader.h  SkyBoxRenderer.h  Texture.h  Vertex.h
include/PRISM/Utils/: Debug.h  FLoader.h  PMath.h  Statistics.h
include/glad/: glad.h
shaders/: default.frag  default.vert
src/: glad.c  source.cpp
src/PRISM/: App.cpp  Shader.cpp
src/PRISM/Core/: Time.cpp  Window.cpp
src/PRISM/Core/Input/: Input.cpp  Mouse.cpp
src/PRISM/Editor/Panels/: DevelopmentPanel.cpp  EditorScenePanel.cpp  EditorStatisticsPanel.cpp
src/PRISM/Engine/: CameraEntity.cpp  Entity.cpp  Light.cpp  ModelEntity.cpp  OrbitalCameraEntity.cpp  Scene.cpp  Terrain.cpp
src/PRISM/Examples/: CubeScene.cpp  TerrainGenerator.cpp  TerrainScene.cpp
src/PRISM/Examples/Panels/: EditorSceneTerrainPanel.cpp
src/PRISM/Renderer/: Camera.cpp  Cube.cpp  CubeMap.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  SkyBoxRenderer.cpp  Texture.cpp
src/PRISM/Utils/: Debug.cpp  FLoader.cpp  PMath.cpp  Statistics.cpp
